--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,9 +6,16 @@ $black: #101010
 $lightgray: #D4D4D4
 $mediumgray: #949494
 
-@mixin nth-margin($n)
+@mixin nth-horizontal-margin($n)
   &:nth-child(#{$n})
     margin: 0 2em
+
+@mixin nth-vertical-margin($n)
+  &:nth-child(#{$n})
+    margin: 2em 0
+
+html
+  scroll-behavior: smooth
 
 body
   color: $white
@@ -55,16 +62,30 @@ body
           font-size: 0.75em
           padding-bottom: 0.5em
 
-          &:hover
+          &:hover, &:active, &:focus
             border-bottom-color: $blue
 
   &.region-content
     #block-top-content-header
-      background-size: 100% 100%
+      position: relative
+      background-size: cover
       background-repeat: no-repeat
       text-align: center
       padding-top: 5em
       padding-bottom: 7em
+
+      & > *
+        z-index: 100
+
+      &::after
+        content: ""
+        background: rgba(0, 0, 0, 0.25)
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
+        height: 100%
+        z-index: 1
 
       h1
         font-weight: 100
@@ -95,7 +116,7 @@ body
           border-color: $white
 
     #block-adchallenge-content
-      padding: 0 10em
+      padding: 5em 10em
 
       h2
         text-transform: uppercase
@@ -121,11 +142,12 @@ body
         display: flex
 
         .views-row
-          @include nth-margin(even)
+          @include nth-horizontal-margin(even)
 
           h2
             border: transparent
             padding-bottom: 0
+            margin-bottom: .25em
 
             a
               color: $white
@@ -151,25 +173,28 @@ body
               line-height: 2em
 
           .node__links
-            padding-bottom: 8em
+            margin-top: 1em
 
-            a
-              color: $white
-              text-decoration: none
-              text-transform: capitalize
+            li
+              padding-left: 0
 
-            a:hover:after
-              color: $red
+              a
+                color: $white
+                text-decoration: none
+                font-size: .9em
 
-            a:after
-              position: absolute
-              padding-left: 0.25em
-              content: ">"
-              color: $blue
+              a:hover:after
+                color: $red
+
+              a:after
+                position: absolute
+                padding-left: 0.25em
+                content: ">"
+                color: $blue
 
     #block-latest-event
       #challenge-event
-        padding: 8em 10em
+        padding: 5em 10em
         display: flex
         justify-content: space-around
         background-color: $darkblue
@@ -205,7 +230,6 @@ body
             position: absolute
             right: 0
             bottom: -2px
-
 
           .clearfix
             p
@@ -253,17 +277,16 @@ body
         .img-right
           flex: 1
           position: relative
-          z-index: 2
           margin-left: 2em
 
           &::before
             position: absolute
-            width: 100px
-            height: 100px
+            width: 150px
+            height: 150px
             content: " "
-            margin-left: -50px
+            margin-left: -75px
             margin-top: -50px
-            background-color: $white
+            background-color: #0F2123
             z-index: 1
 
           &::after
@@ -271,14 +294,19 @@ body
             width: 100px
             height: 100px
             content: " "
-            margin-left: 475px
-            margin-top: -54px
+            right: -40px
+            bottom: -40px
             transform: rotate(45deg)
             background-color: #1D1524
+            z-index: 1
 
           img
             width: 100%
             height: 100%
+
+          div
+            z-index: 100
+            position: relative
 
   &.region-footer
     #block-footer
@@ -291,7 +319,7 @@ body
         margin-left: 0
 
         .menu-item
-          @include nth-margin(even)
+          @include nth-horizontal-margin(even)
 
           a
             text-decoration: none
@@ -301,6 +329,7 @@ body
 
     #block-footercreated
       background-color: #1E2C2E
+
       p
         margin: 0
         text-align: center
@@ -311,24 +340,12 @@ body
         a
           color: $mediumgray
 
+@media screen and (max-width: 900px)
+  .region
+    &.region-content
+      #block-adchallenge-content
+        .view-content
+          flex-direction: column
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+          .views-row
+            @include nth-vertical-margin(even)
