--- a/sass/style.sass
+++ b/sass/style.sass
@@ -74,8 +74,9 @@ body
       padding-top: 5em
       padding-bottom: 7em
 
-      & > *
-        z-index: 100
+      .container
+        z-index: 2
+        position: relative
 
       &::after
         content: ""
@@ -121,22 +122,18 @@ body
       h2
         text-transform: uppercase
         font-weight: 100
-        border-bottom: 2px solid $blue
         display: inline-block
         position: relative
         padding-bottom: 0.75em
 
       h2:after
-        padding: 0
-        margin: 0
-        display: block
         content: ""
         width: 57%
         height: 2px
-        background-color: $black
+        background-color: $blue
         position: absolute
-        right: 0
-        bottom: -2px
+        left: 0
+        bottom: 0
 
       .view-content
         display: flex
@@ -231,21 +228,22 @@ body
             right: 0
             bottom: -2px
 
-          .clearfix
-            p
-              color: $mediumgray
-              font-size: 0.75em
-              padding-bottom: 2em
-              line-height: 2em
+          p
+            color: $mediumgray
+            font-size: 0.75em
+            padding-bottom: 2em
+            line-height: 2em
 
     #block-about-me
+      padding: 5em 10em
+
       #challenge-about-me
         display: flex
-        padding: 8em 10em
         align-items: center
 
         .content-left
           flex: 1
+          z-index: 2
 
           h2
             padding-bottom: 0.75em
@@ -343,9 +341,39 @@ body
 @media screen and (max-width: 900px)
   .region
     &.region-content
+      #block-latest-event
+        .container
+          flex-direction: column
+
+        #challenge-event
+          padding: 2em
+
+          .img-left
+            width: 100%
+
+          .content-right
+            margin-left: 0
+            margin-top: 1em
+
+            p
+              margin-bottom: 0
+              padding-bottom: 0
+
       #block-adchallenge-content
+        padding: 2em
+
         .view-content
           flex-direction: column
 
           .views-row
             @include nth-vertical-margin(even)
+
+      #block-about-me
+        padding: 2em
+
+        #challenge-about-me
+          flex-direction: column
+
+          .img-right
+            margin-left: 0
+            margin-top: 1em
