--- a/sass/style.sass
+++ b/sass/style.sass
@@ -22,21 +22,24 @@ body
   background-color: $black
   font-family: 'Roboto', sans-serif
 
+header
+  position: fixed
+  left: 0
+  top: 0
+  width: 100%
+  z-index: 10
+
 .region
   &.region-header
     background-color: rgba(0, 0, 0, 0.75)
-    width: 100%
     display: flex
     justify-content: space-between
     align-items: center
-    padding: 1em 1em
-    position: fixed
-    z-index: 10
+    padding: 1em 10em
 
     #block-adchallenge-branding
       display: flex
       align-items: center
-      padding-left: 9em  // padding 9 because .menu has margin 1em
 
       .site-logo
         img
@@ -48,11 +51,13 @@ body
     .menu
       display: flex
       margin-right: 1em
-      padding-right: 9em //padding 9 becaseu it has margin, fix it or leave it.
 
       .menu-item
         margin: 0 1em
         padding-top: 0
+
+        &:last-child
+          margin-right: 0
 
         a
           color: $white
@@ -107,7 +112,7 @@ body
         padding: 1.35em 3.5em
         color: $white
         text-decoration: none
-        border-radius: 5px // rounded corners
+        border-radius: 5px
         font-size: 0.6em
         text-transform: uppercase
         border: $red solid 1px
@@ -119,21 +124,21 @@ body
     #block-adchallenge-content
       padding: 5em 10em
 
-      h2
+      & > h2
         text-transform: uppercase
         font-weight: 100
         display: inline-block
         position: relative
         padding-bottom: 0.75em
 
-      h2:after
-        content: ""
-        width: 57%
-        height: 2px
-        background-color: $blue
-        position: absolute
-        left: 0
-        bottom: 0
+        &:after
+          content: ""
+          width: 100px
+          height: 2px
+          background-color: $blue
+          position: absolute
+          left: 0
+          bottom: 0
 
       .view-content
         display: flex
@@ -208,25 +213,21 @@ body
           margin-left: 2em
           flex: 1
 
-          h2
-            padding-bottom: 0.75em
+          & > h2
             text-transform: uppercase
             font-weight: 100
-            border-bottom: 2px solid $blue
             display: inline-block
             position: relative
+            padding-bottom: 0.75em
 
-          h2:after
-            padding: 0
-            margin: 0
-            display: block
-            content: ""
-            width: 57%
-            height: 2px
-            background-color: $darkblue
-            position: absolute
-            right: 0
-            bottom: -2px
+            &:after
+              content: ""
+              width: 100px
+              height: 2px
+              background-color: $blue
+              position: absolute
+              left: 0
+              bottom: 0
 
           p
             color: $mediumgray
@@ -245,25 +246,21 @@ body
           flex: 1
           z-index: 2
 
-          h2
-            padding-bottom: 0.75em
+          & > h2
             text-transform: uppercase
             font-weight: 100
-            border-bottom: 2px solid $blue
             display: inline-block
             position: relative
+            padding-bottom: 0.75em
 
-          h2:after
-            padding: 0
-            margin: 0
-            display: block
-            content: ""
-            width: 40%
-            height: 2px
-            background-color: $black
-            position: absolute
-            right: 0
-            bottom: -2px
+            &:after
+              content: ""
+              width: 100px
+              height: 2px
+              background-color: $blue
+              position: absolute
+              left: 0
+              bottom: 0
 
           .clearfix
             p
@@ -340,6 +337,12 @@ body
 
 @media screen and (max-width: 900px)
   .region
+    &.region-header
+      padding: 1em 2em
+
+      .menu
+        margin-left: 0
+
     &.region-content
       #block-latest-event
         .container
