add active class to menu link when clicked

--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ header {
   font-size: 0.75em;
   padding-bottom: 0.5em;
 }
-.region.region-header .menu .menu-item a:hover, .region.region-header .menu .menu-item a:active, .region.region-header .menu .menu-item a:focus {
+.region.region-header .menu .menu-item a:hover, .region.region-header .menu .menu-item a:focus, .region.region-header .menu .menu-item a.active {
   border-bottom-color: #0097A7;
 }
 .region.region-content #block-top-content-header {
