--- a/sass/style.sass
+++ b/sass/style.sass
@@ -64,7 +64,7 @@ header
           font-size: 0.75em
           padding-bottom: 0.5em
 
-          &:hover, &:active, &:focus
+          &:hover, &:focus, &.active
             border-bottom-color: $blue
 
   &.region-content
